B.INF2 Compilers/src/parser/grammars/GrammarParser.py
# Generated from src/parser/grammars/Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'typedef'", "'typedef;'", "'struct'", 
                     "'union'", "'{'", "'}'", "','", "'enum'", "'='", "'#include'", 
                     "'('", "')'", "'break'", "'continue'", "'return'", 
                     "'if'", "'else'", "'while'", "'for'", "'switch'", "'case'", 
                     "':'", "'default'", "'sizeof'", "'['", "']'", "'.'", 
                     "'->'", "'++'", "'--'", "'+'", "'-'", "'!'", "'~'", 
                     "'*'", "'&'", "'/'", "'%'", "'<<'", "'>>'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'^'", "'|'", 
                     "'&&'", "'||'", "'const'", "'float'", "'int'", "'char'", 
                     "'void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CHAR", "STRING", "INT", "REAL", "ID", 
                      "WS", "HEADER_LOCAL", "HEADER_SYSTEM", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_root = 0
    RULE_headerElement = 1
    RULE_typedefDecl = 2
    RULE_structDecl = 3
    RULE_structFieldDecl = 4
    RULE_structFieldList = 5
    RULE_structField = 6
    RULE_enum = 7
    RULE_globalDeclaration = 8
    RULE_labels = 9
    RULE_label = 10
    RULE_include = 11
    RULE_header = 12
    RULE_function = 13
    RULE_parameters = 14
    RULE_parameter = 15
    RULE_statement = 16
    RULE_ifStatement = 17
    RULE_whileLoop = 18
    RULE_forInit = 19
    RULE_forLoop = 20
    RULE_switchStatement = 21
    RULE_switchCase = 22
    RULE_expr = 23
    RULE_arg_list = 24
    RULE_literal = 25
    RULE_declaration = 26
    RULE_init_declarator = 27
    RULE_initializer_list = 28
    RULE_initializer_element = 29
    RULE_array_sizes = 30
    RULE_type = 31
    RULE_pointerQualifier = 32
    RULE_typeQualifier = 33
    RULE_typeSpecifier = 34
    RULE_keyword = 35

    ruleNames =  [ "root", "headerElement", "typedefDecl", "structDecl", 
                   "structFieldDecl", "structFieldList", "structField", 
                   "enum", "globalDeclaration", "labels", "label", "include", 
                   "header", "function", "parameters", "parameter", "statement", 
                   "ifStatement", "whileLoop", "forInit", "forLoop", "switchStatement", 
                   "switchCase", "expr", "arg_list", "literal", "declaration", 
                   "init_declarator", "initializer_list", "initializer_element", 
                   "array_sizes", "type", "pointerQualifier", "typeQualifier", 
                   "typeSpecifier", "keyword" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    CHAR=57
    STRING=58
    INT=59
    REAL=60
    ID=61
    WS=62
    HEADER_LOCAL=63
    HEADER_SYSTEM=64
    LINE_COMMENT=65
    BLOCK_COMMENT=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def headerElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.HeaderElementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.HeaderElementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = GrammarParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4607182692637743678) != 0):
                self.state = 72
                self.headerElement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(GrammarParser.IncludeContext,0)


        def enum(self):
            return self.getTypedRuleContext(GrammarParser.EnumContext,0)


        def function(self):
            return self.getTypedRuleContext(GrammarParser.FunctionContext,0)


        def globalDeclaration(self):
            return self.getTypedRuleContext(GrammarParser.GlobalDeclarationContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(GrammarParser.StructDeclContext,0)


        def typedefDecl(self):
            return self.getTypedRuleContext(GrammarParser.TypedefDeclContext,0)


        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_headerElement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeaderElement" ):
                return visitor.visitHeaderElement(self)
            else:
                return visitor.visitChildren(self)




    def headerElement(self):

        localctx = GrammarParser.HeaderElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_headerElement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.include()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.enum()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.function()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.globalDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.structDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.typedefDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(GrammarParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.match(GrammarParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GrammarParser.TypeContext,0)


        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_typedefDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedefDecl" ):
                return visitor.visitTypedefDecl(self)
            else:
                return visitor.visitChildren(self)




    def typedefDecl(self):

        localctx = GrammarParser.TypedefDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typedefDecl)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(GrammarParser.T__1)
                self.state = 93
                self.type_()
                self.state = 94
                self.match(GrammarParser.ID)
                self.state = 95
                self.match(GrammarParser.T__0)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(GrammarParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def structFieldDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StructFieldDeclContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StructFieldDeclContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_structDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = GrammarParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==4 or _la==5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==61:
                    self.state = 101
                    self.match(GrammarParser.ID)


                self.state = 104
                self.match(GrammarParser.T__5)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2445454597662179888) != 0):
                    self.state = 105
                    self.structFieldDecl()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self.match(GrammarParser.T__6)
                self.state = 112
                self.match(GrammarParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                _la = self._input.LA(1)
                if not(_la==4 or _la==5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 114
                self.match(GrammarParser.ID)
                self.state = 115
                self.match(GrammarParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GrammarParser.TypeContext,0)


        def structFieldList(self):
            return self.getTypedRuleContext(GrammarParser.StructFieldListContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_structFieldDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructFieldDecl" ):
                return visitor.visitStructFieldDecl(self)
            else:
                return visitor.visitChildren(self)




    def structFieldDecl(self):

        localctx = GrammarParser.StructFieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structFieldDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.type_()
            self.state = 119
            self.structFieldList()
            self.state = 120
            self.match(GrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StructFieldContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StructFieldContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_structFieldList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructFieldList" ):
                return visitor.visitStructFieldList(self)
            else:
                return visitor.visitChildren(self)




    def structFieldList(self):

        localctx = GrammarParser.StructFieldListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structFieldList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.structField()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 123
                self.match(GrammarParser.T__7)
                self.state = 124
                self.structField()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def array_sizes(self):
            return self.getTypedRuleContext(GrammarParser.Array_sizesContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_structField

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructField" ):
                return visitor.visitStructField(self)
            else:
                return visitor.visitChildren(self)




    def structField(self):

        localctx = GrammarParser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structField)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(GrammarParser.ID)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 131
                self.array_sizes()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labels(self):
            return self.getTypedRuleContext(GrammarParser.LabelsContext,0)


        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_enum

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum" ):
                return visitor.visitEnum(self)
            else:
                return visitor.visitChildren(self)




    def enum(self):

        localctx = GrammarParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(GrammarParser.T__8)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 135
                self.match(GrammarParser.ID)


            self.state = 138
            self.match(GrammarParser.T__5)
            self.state = 139
            self.labels()
            self.state = 140
            self.match(GrammarParser.T__6)
            self.state = 141
            self.match(GrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(GrammarParser.DeclarationContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_globalDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDeclaration" ):
                return visitor.visitGlobalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def globalDeclaration(self):

        localctx = GrammarParser.GlobalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_globalDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.declaration()
            self.state = 144
            self.match(GrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.LabelContext)
            else:
                return self.getTypedRuleContext(GrammarParser.LabelContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_labels

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabels" ):
                return visitor.visitLabels(self)
            else:
                return visitor.visitChildren(self)




    def labels(self):

        localctx = GrammarParser.LabelsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_labels)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.label()
            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 147
                    self.match(GrammarParser.T__7)
                    self.state = 148
                    self.label() 
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 154
                self.match(GrammarParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_label

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = GrammarParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(GrammarParser.ID)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 158
                self.match(GrammarParser.T__9)
                self.state = 159
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(GrammarParser.HeaderContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = GrammarParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(GrammarParser.T__10)
            self.state = 163
            self.header()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER_SYSTEM(self):
            return self.getToken(GrammarParser.HEADER_SYSTEM, 0)

        def HEADER_LOCAL(self):
            return self.getToken(GrammarParser.HEADER_LOCAL, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_header

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = GrammarParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not(_la==63 or _la==64):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GrammarParser.TypeContext,0)


        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(GrammarParser.ParametersContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = GrammarParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.type_()
                self.state = 168
                self.match(GrammarParser.ID)
                self.state = 169
                self.match(GrammarParser.T__11)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2445454597662179888) != 0):
                    self.state = 170
                    self.parameters()


                self.state = 173
                self.match(GrammarParser.T__12)
                self.state = 183
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 174
                    self.match(GrammarParser.T__0)
                    pass
                elif token in [6]:
                    self.state = 175
                    self.match(GrammarParser.T__5)
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4607182692641657470) != 0):
                        self.state = 176
                        self.statement()
                        self.state = 181
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 182
                    self.match(GrammarParser.T__6)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
